k8s/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-spatial
  namespace: crod-polyglot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-spatial
  template:
    metadata:
      labels:
        app: postgres-spatial
    spec:
      containers:
      - name: postgres
        image: postgis/postgis:16-3.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-spatial
  namespace: crod-polyglot
spec:
  selector:
    app: postgres-spatial
  ports:
  - port: 5432
    targetPort: 5432
